# angelonetwork-sdk-for-javascript-v1

./: .gitignore  .gitmodules  readme.md
cpp/: BUILD.gn  README.md  build.sh  package-lock.json  package.json
cpp/crypto/: main.cpp  package.json
cpp/cryptolib/: aes.cpp  aesCus.h  cryptoclass.h  cryptocommon.cpp  cryptocommon.h  cryptolib.cpp  cryptolib.h  ecc.cpp  ecc.h  ecdsa.cpp  ecdsa.h  keyderivation.cpp  keyderivation.h  keydrivation.cpp
cpp/cryptopp/: BUILD.gn
cpp/windows/: cryptest.sln  cryptest.vcxproj  cryptest.vcxproj.filters  cryptlib.vcxproj  cryptlib.vcxproj.filters  crypto.vcxproj
dfsclient/: README.md  index.js  package.json
dfsclient/dfs/: auth.js  clientdfs.js  config.js  config.json  crypto.js  dfs.js  folder.js  storage.js
dfsclient/dfs/crypto/linux/: crypto
samples/: .dfsconfig.json  .gitignore  README.md  package-lock.json  package.json  workspace.code-workspace
samples/public/: index.html
samples/src/: App.css  App.js  electron-main.js  electron-starter.js  index.js  mainpage.js  registerpage.js  signinpage.js
samples/src/pages/: enhancedtable.js  filenamedialog.js  folderlist.js  folderview.js  myfile.js  mysharingfile.js  register.js  signin.js  usersdialog.js
